# jv-pay-app

./: .ai-context.md  .aidigest  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRE_PUSH_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  SETUP_GUIDE.md  SHARING_SUMMARY.md  V2-QUICK-START.md  _compare.py  _diag_words.py  _inspect.py  _render_app13.py  api_push2.ps1  build_app13_csv.py  docker-compose.yml  fix_nb.py  gc_app12_cover_v2.csv  gc_app12_line_items_v2.csv  gc_app12_line_items_v5.csv  gc_app12_master_extraction.json  gc_app12_plumber_nums.json  gc_app13_plumber_nums.json  gc_app4_line_items.csv  gc_app8_line_items.csv  graphql_push.ps1  graphql_push4.ps1  graphql_push6.ps1  graphql_push7.ps1  graphql_push_phased.ps1  graphql_push_ui.ps1  pdfplumber_extract.py  pdfplumber_extract_app13.py  push_to_github.ps1  quick-share-workflow.ps1  run_cell6.py  subcontractor_line_items.xlsx  (+6 more)
ai-engine/: .gitignore  Dockerfile  debug_co_summary.py  debug_nodes_direct.py  debug_sov_final.py  debug_sprint5.py  debug_sub_boundary.py  debug_sub_boundary2.py  debug_thread_test.py  pyproject.toml  requirements.txt
ai-engine/app/: __init__.py  config.py  main.py
ai-engine/app/agents/: __init__.py  extractor_agent.py  sov_agent.py  verifier_agent.py
ai-engine/app/agents/tools/: __init__.py  coordinate_tools.py  db_tools.py  doc_intelligence_tools.py  (+5 more)
ai-engine/app/graph/: builder.py  edges.py  state.py
ai-engine/app/nodes/: __init__.py
ai-engine/scripts/: debug_sov.py  extract_missing_pages.py  extract_subs_vision.py  reextract_sov.py  run_sov_agent.py
(+255 files in other folders)
